resolved overlapping issues

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ img {
   width: 100%;
 }
 
+.d-flex {
+  display: flex;
+}
+
 button {
   cursor: pointer;
 }
@@ -351,13 +355,25 @@ a:hover {
     border-top: 1px solid rgba(218, 218, 218, 0.849);
   }
 
+
   .subscribe-title {
     font-size: 24px;
+    /* padding-left: 50px; */
+  }
+
+  .subscribe-subtitle {
+    font-size: 15px;
+    /* padding-left: 50px; */
   }
 
   .subscribe-details *,
   .newsletter-header * {
     text-align: left;
+  }
+
+  .subscribe-button {
+    font-size: 15px;
+    /* margin-left: 50px; */
   }
 
   .newsletter-image {
